# neo4j-for-surveillance-poc-3

./: .gitguardian.yaml  .gitignore  .mcp.json  01-create-schema.sh  04-generate-embeddings.sh  CLAUDE.md  CONTRIBUTING.md  README.md  README_CLAUDE_PR_AUTOMATION.md  README_DATA_IMPORT.md  README_ENTITY_RESOLUTION.md  README_EVALUATIONS.md  README_GITHUB_KANBAN.md  README_GRAPH_ANALYTICS_CASE_STUDY.md  README_MCP.md  README_cypher-shell.md  env.example  generate-embeddings.sh  pyproject.toml  pytest.ini  requirements-test.txt
.claude/: __init__.py  settings.json
.github/: ISSUE_TEMPLATE.md
analysis/: TROUBLESHOOTING-DATE-ISSUE.md
docs/: README.md  case-study.md  claude-automation.md  complete-setup-guide.md  data-mapping-guide.md  embedding-generation-guide.md  entity-resolution.md  evaluation-harness-usage.md  evaluations.md  git-workflow-rescue.md  graph-analytics-visualization-guide.md  graph-schema-guide.md  import.md  index.html  index.md  issue-26-context.md  kanban.md  lucene.md  mcp-time-server-setup.md  neo4j-backup-and-restore.md  neo4j-export-comparison.md  neo4j-graph-schema.mmd  pytest-reports-guide.md  test-results.html  work-command-evolution.md
evals/: README.md  evaluation_tests.md  progress.md  template.md  validation-report.md
queries/: README.md  data-exploration.cypher  eval-suite.cypher  graph-visualization-examples.cypher  investigative.cypher  network-visualizations.cypher  practical-investigation-queries.cypher  vector-search-verification.cypher
scripts/: 01-create-schema.sh  02-import-sessions.py  03-analyst-knowledge-aliases.cypher  (+31 more)
(+323 files in other folders)
