[project]
name = "neo4j-surveillance-poc"
version = "0.1.0"
dependencies = [
    "pytest>=7.0.0",
]

[tool.ruff]
# Less is more: One tool, simple config
target-version = "py39"
line-length = 120

[tool.ruff.lint]
# Enable rules from multiple tools in one place
select = [
    "E",    # pycodestyle errors (flake8)
    "W",    # pycodestyle warnings (flake8)
    "F",    # pyflakes (flake8)
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "RUF",  # Ruff-specific rules
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]